--- a/apps/ui/project.json
+++ b/apps/ui/project.json
@@ -24,7 +24,8 @@
       "executor": "@nx/vite:dev-server",
       "defaultConfiguration": "development",
       "options": {
-        "buildTarget": "ui:build"
+        "buildTarget": "ui:build",
+        "proxyConfig": "apps/ui/proxy.conf.json"
       },
       "configurations": {
         "development": {
