--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@swc/helpers": "~0.5.0",
     "axios": "^1.0.0",
     "express": "~4.18.1",
+    "mongoose": "7.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
